schedule 2026 additional updates

--- a/yoga-inperson.html
+++ b/yoga-inperson.html
@@ -237,6 +237,9 @@
 	  <a href="#jan8" class="date-pill">Jan 8</a>
           <a href="#jan6" class="date-pill">Jan 6</a>
 	  <a href="#jan5" class="date-pill">Jan 5</a>
+          <a href="#jan2" class="date-pill">Jan 2</a>
+          <a href="#jan3" class="date-pill">Jan 3</a>
+<a href="#dec23" class="date-pill">Dec 23</a>
           <a href="#dec13" class="date-pill">Dec 13</a>
 	  <a href="#dec12" class="date-pill">Dec 12</a>
 	  <a href="#dec5" class="date-pill">Dec 5</a>
@@ -332,7 +335,58 @@
             </td>
           </tr>
 
-	  <!-- Dec 13 -->
+<!-- Jan 3 -->
+          <tr id="jan3">
+            <td class="schedule-date">Saturday, Jan 3rd</td>
+            <td class="schedule-time">11:00 AM</td>
+            <td class="schedule-duration">60 min</td>
+            <td class="schedule-class">Beginner Vinyasa Flow</td>
+            <td class="schedule-instructor">Lisa</td>
+            <td class="schedule-location">Urban Adamah Silent Retreat</td>
+            <td class="schedule-cta">
+              <a class="btn btn-dark btn-pill schedule-btn"
+                 href="https://www.urbanadamah.org"
+                 target="_blank" rel="noopener">
+                join
+              </a>
+            </td>
+          </tr>
+
+<!-- Jan 2 -->
+          <tr id="jan3">
+            <td class="schedule-date">Friday, Jan 2nd</td>
+            <td class="schedule-time">11:00 AM</td>
+            <td class="schedule-duration">60 min</td>
+            <td class="schedule-class">Beginner Vinyasa Flow</td>
+            <td class="schedule-instructor">Lisa</td>
+            <td class="schedule-location">Urban Adamah Silent Retreat</td>
+            <td class="schedule-cta">
+              <a class="btn btn-dark btn-pill schedule-btn"
+                 href="https://www.urbanadamah.org"
+                 target="_blank" rel="noopener">
+                join
+              </a>
+            </td>
+          </tr>
+
+<!-- Dec 23 -->
+          <tr id="dec13">
+            <td class="schedule-date">Tuesday, Dec 23rd</td>
+            <td class="schedule-time">11:00 AM</td>
+            <td class="schedule-duration">60 min</td>
+            <td class="schedule-class">Deep Flow</td>
+            <td class="schedule-instructor">Lisa</td>
+            <td class="schedule-location">Hermosa Beach Pier</td>
+            <td class="schedule-cta">
+              <a class="btn btn-dark btn-pill schedule-btn"
+                 href="https://partiful.com/e/1sBlxZltNg9ss1PobRjF"
+                 target="_blank" rel="noopener">
+                join
+              </a>
+            </td>
+          </tr>	  
+
+<!-- Dec 13 -->
           <tr id="dec13">
             <td class="schedule-date">Saturday, Dec 13th</td>
             <td class="schedule-time">1:00 PM</td>
