ugc page updates again

--- a/ugc.html
+++ b/ugc.html
@@ -238,15 +238,15 @@
       </div>
     </article>
 
-    <!-- testomonial -->
+    <!-- testimonial -->
     <article class="ugc-reel-item">
       <h3 class="ugc-reel-label">testimonial</h3>
-      <h3 class="ugc-reel-label">hiking gear</h3>
+      <h3 class="ugc-reel-label">lip butter</h3>
       <div class="phone-shell">
         <div class="phone-screen">
           <video class="ugc-video"
-                 src="videos/ugc-hike.mp4"
-                 poster="images/ugc-hike-poster.jpg"
+                 src="videos/ugc-lipbutter.mp4"
+                 poster="images/ugc-lipbutter-poster.jpg"
                  playsinline
                  muted
                  controls>
