ugc iphone frame updates test 1

--- a/ugc.html
+++ b/ugc.html
@@ -147,7 +147,7 @@
           </video>
         </div>
         <img class="phone-frame"
-             src="images/phone-frame-large-transparent.png"
+             src="images/phone-frame.png"
              alt=""
              aria-hidden="true">
       </div>
@@ -169,7 +169,7 @@
           </video>
         </div>
         <img class="phone-frame"
-             src="images/phone-frame-large-transparent.png"
+             src="images/phone-frame.png"
              alt=""
              aria-hidden="true">
       </div>
@@ -190,7 +190,7 @@
           </video>
         </div>
         <img class="phone-frame"
-             src="images/phone-frame-large-transparent.png"
+             src="images/phone-frame.png"
              alt=""
              aria-hidden="true">
       </div>
@@ -211,7 +211,7 @@
           </video>
         </div>
         <img class="phone-frame"
-             src="images/phone-frame-large-transparent.png"
+             src="images/phone-frame.png"
              alt=""
              aria-hidden="true">
       </div>
@@ -232,7 +232,7 @@
           </video>
         </div>
         <img class="phone-frame"
-             src="images/phone-frame-large-transparent.png"
+             src="images/phone-frame.png"
              alt=""
              aria-hidden="true">
       </div>
@@ -253,7 +253,7 @@
           </video>
         </div>
         <img class="phone-frame"
-             src="images/phone-frame-large-transparent.png"
+             src="images/phone-frame.png"
              alt=""
              aria-hidden="true">
       </div>
