--- a/ugc.html
+++ b/ugc.html
@@ -127,138 +127,32 @@
   })();
 </script>
 
-<!-- =================== UGC Phone Reel Strip =================== -->
-<section class="ugc-reel" aria-label="UGC vertical samples">
+<!-- =================== UGC Reel Strip =================== -->
+<section class="ugc-reel-section" aria-label="UGC vertical samples">
   <h2 class="visually-hidden">UGC Video Examples</h2>
 
-  <div class="ugc-reel-row">
+    <!-- 1. TESTIMONIAL · LIP BUTTER -->
+    <article class="ugc-reel">
+      <div class="ugc-phone">
+        <video class="ugc-video"
+               src="videos/ugc-lipbutter.mp4"
+               poster="images/ugc-lipbutter-poster.jpg"
+               playsinline
+               muted
+               controls>
+        </video>
 
-<!-- intro -->
-    <article class="ugc-reel-item">
-      <h3 class="ugc-reel-label">intro</h3>
-      <div class="phone-shell">
-        <div class="phone-screen">
-          <video class="ugc-video"
-                 src="videos/ugc-intro.mp4"
-                 poster="images/ugc-intro-poster.jpg"
-                 playsinline
-                 muted
-                 controls>
-          </video>
-        </div>
-        <img class="phone-frame"
-             src="images/phone-frame.png"
+        <img src="images/phone-frame.png"
              alt=""
+             class="ugc-phone-frame"
              aria-hidden="true">
+
+        <button class="ugc-tag" type="button">
+          <span class="ugc-tag-title">testimonial</span>
+          <span class="ugc-tag-sub">lip butter</span>
+        </button>
       </div>
     </article>
-
-
-    <!-- B-Roll -->
-    <article class="ugc-reel-item">
-      <h3 class="ugc-reel-label">b-roll w/vo</h3>
-      <h3 class="ugc-reel-label">althletic wear</h3>
-      <div class="phone-shell">
-        <div class="phone-screen">
-          <video class="ugc-video"
-                 src="videos/ugc-yoga.mp4"
-                 poster="images/ugc-yoga-poster.jpg"
-                 playsinline
-                 muted
-                 controls>
-          </video>
-        </div>
-        <img class="phone-frame"
-             src="images/phone-frame.png"
-             alt=""
-             aria-hidden="true">
-      </div>
-    </article>
-
-    <!-- product demo -->
-    <article class="ugc-reel-item">
-      <h3 class="ugc-reel-label">product demo</h3>
-      <h3 class="ugc-reel-label">lip care</h3>
-      <div class="phone-shell">
-        <div class="phone-screen">
-          <video class="ugc-video"
-                 src="videos/ugc-skin.mp4"
-                 poster="images/ugc-skin-poster.jpg"
-                 playsinline
-                 muted
-                 controls>
-          </video>
-        </div>
-        <img class="phone-frame"
-             src="images/phone-frame.png"
-             alt=""
-             aria-hidden="true">
-      </div>
-    </article>
-
-    <!-- educational -->
-    <article class="ugc-reel-item">
-      <h3 class="ugc-reel-label">educational</h3>
-      <h3 class="ugc-reel-label">AI app</h3>
-      <div class="phone-shell">
-        <div class="phone-screen">
-          <video class="ugc-video"
-                 src="videos/apps-travel.mp4"
-                 poster="images/ugc-apps-poster.jpg"
-                 playsinline
-                 muted
-                 controls>
-          </video>
-        </div>
-        <img class="phone-frame"
-             src="images/phone-frame.png"
-             alt=""
-             aria-hidden="true">
-      </div>
-    </article>
-
-    <!-- skit -->
-    <article class="ugc-reel-item">
-      <h3 class="ugc-reel-label">skit</h3>
-      <h3 class="ugc-reel-label">travel containers</h3>
-      <div class="phone-shell">
-        <div class="phone-screen">
-          <video class="ugc-video"
-                 src="videos/ugc-travel.mp4"
-                 poster="images/ugc-travel-poster.jpg"
-                 playsinline
-                 muted
-                 controls>
-          </video>
-        </div>
-        <img class="phone-frame"
-             src="images/phone-frame.png"
-             alt=""
-             aria-hidden="true">
-      </div>
-    </article>
-
-    <!-- testimonial -->
-    <article class="ugc-reel-item">
-      <h3 class="ugc-reel-label">testimonial</h3>
-      <h3 class="ugc-reel-label">lip butter</h3>
-      <div class="phone-shell">
-        <div class="phone-screen">
-          <video class="ugc-video"
-                 src="videos/ugc-lipbutter.mp4"
-                 poster="images/ugc-lipbutter-poster.jpg"
-                 playsinline
-                 muted
-                 controls>
-          </video>
-        </div>
-        <img class="phone-frame"
-             src="images/phone-frame.png"
-             alt=""
-             aria-hidden="true">
-      </div>
-    </article>
-
   </div>
 </section>
 
