ugc header corrections

--- a/ugc.html
+++ b/ugc.html
@@ -43,7 +43,7 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container nav-wrap">
-      <a class="brand" href="ugc.html">ugc with lisa</a>     
+      <a class="brand" href="index.html">ugc with lisa</a>     
       <nav class="main-nav" aria-label="Primary">
         <ul>
           <li><a href="mailto:lisaeshunwilson@gmail.com?subject=UGC%20Collaboration%20Inquiry" class="login-btn">CHAT</a></li>
