ugc video corrections

--- a/ugc.html
+++ b/ugc.html
@@ -142,11 +142,6 @@
                controls>
         </video>
 
-        <img src="images/phone-frame.png"
-             alt=""
-             class="ugc-phone-frame"
-             aria-hidden="true">
-
         <button class="ugc-tag" type="button">
           <span class="ugc-tag-title">testimonial</span>
           <span class="ugc-tag-sub">lip butter</span>
@@ -232,7 +227,7 @@
     💻 SF Techie at heart</p>
       <p>
     🍓🍌 Smoothie Addict</p>
-    <a class="btn btn-pill btn-outline" href="https://available-tarsal-b72.notion.site/Life-with-Lisa-e86714127b6143e1a6224f0e36011696">A LITTLE MORE ABOUT LISA</a>
+    <a class="btn btn-pill btn-outline" href="www.lisaeshunwilson.com">A LITTLE MORE ABOUT LISA</a>
   </div>
 </section>
 
