signin memberstack update

--- a/login.html
+++ b/login.html
@@ -101,11 +101,10 @@
    href="signin.html">Join our Mailing List</a>
 
 <a class="btn btn-pill btn-dark btn-wide" 
-   href="#"
-   data-ms-price:add="prc_premium-monthly-plan-cklp04n5">Subscribe Now | Monthly Plan – $16.99/mo</a>
+   href="signin.html">Subscribe Now | Monthly Plan – $16.99/mo</a>
 
 <a class="btn btn-pill btn-dark btn-wide" 
-   href="#" data-ms-price:add="prc_premium-annual--felk04yk">Subscribe Now | Annual Plan – $169.99/year</a>
+   href="signin.htm">Subscribe Now | Annual Plan – $169.99/year</a>
 
 <!-- Venmo Donation -->
 <a class="btn btn-pill btn-dark btn-wide"
