ugc lipbutter video corrections

--- a/login.html
+++ b/login.html
@@ -104,7 +104,7 @@
    href="signin.html">Subscribe Now | Monthly Plan – $16.99/mo</a>
 
 <a class="btn btn-pill btn-dark btn-wide" 
-   href="signin.htm">Subscribe Now | Annual Plan – $169.99/year</a>
+   href="signin.html">Subscribe Now | Annual Plan – $169.99/year</a>
 
 <!-- Venmo Donation -->
 <a class="btn btn-pill btn-dark btn-wide"
