ugc videos updates fix

--- a/ugc.html
+++ b/ugc.html
@@ -141,10 +141,8 @@
                muted
                controls>
         </video>
-
-        <button class="ugc-tag" type="button">
+          <button class="ugc-btn">testimonial</button>
           <span class="ugc-tag-title">testimonial</span>
-          <span class="ugc-tag-sub">lip butter</span>
         </button>
       </div>
     </article>
