ugc phone frame fic

--- a/ugc.html
+++ b/ugc.html
@@ -132,29 +132,31 @@
   <h2 class="visually-hidden">UGC Video Examples</h2>
 
   <!-- 1. TESTIMONIAL · LIP BUTTER -->
-  <article class="ugc-reel">
-    <div class="ugc-phone">
-      <!-- iPhone frame image -->
-      <img
-        src="images/phone-frame.png"
-        alt=""
-        class="ugc-phone-frame"
-        aria-hidden="true"
-      >
 
-      <!-- Video inside the frame -->
-      <video class="ugc-video"
-             src="videos/ugc-lipbutter.mp4"
-             poster="images/ugc-lipbutter-poster.jpg"
-             playsinline
-             muted
-             controls>
-      </video>
+<article class="ugc-card">
+  <div class="ugc-phone">
+    <!-- pill on top of the video -->
+    <button class="ugc-tag">testimonial</button>
 
-      <!-- Over-screen label pill (non-clickable, like “Give Back”) -->
-      <div class="ugc-btn">testimonial</div>
-    </div>
-  </article>
+    <!-- the video -->
+    <video
+      class="ugc-video"
+      src="videos/testimonial-lip-butter.mp4"
+      playsinline
+      muted
+      controls
+    ></video>
+
+    <!-- the iPhone frame image -->
+    <img
+      src="images/phone-frame.png"
+      alt=""
+      class="ugc-phone-frame"
+      aria-hidden="true"
+    >
+  </div>
+</article>
+
 </section>
 
 <!-- =================== UGC Offer Banner =================== -->
@@ -169,7 +171,7 @@
     <p>
     ✅ UGC Scriptwriter | Expert in storytelling & conversion tactics.</p>
     <p>
-    ✅ Worked with Top Brands | Navi Beauty, Mayura, Green Yogi, Beach Glass & more.</p>
+    ✅ Partners with top brands | Navi Beauty, Vuori & more.</p>
     <p>
     ✅ Results-driven | Focused on boosting conversions & engagement for short or long-form content.</p>
     <p>
