ugc phone frame v2

--- a/ugc.html
+++ b/ugc.html
@@ -132,30 +132,31 @@
   <h2 class="visually-hidden">UGC Video Examples</h2>
 
   <!-- 1. TESTIMONIAL · LIP BUTTER -->
+  <article class="ugc-card">
+    <div class="ugc-phone">
+      <!-- pill label on top of the phone -->
+      <button type="button" class="ugc-tag">testimonial</button>
 
-<article class="ugc-card">
-  <div class="ugc-phone">
-    <!-- pill on top of the video -->
-    <button class="ugc-tag">testimonial</button>
+      <!-- main video -->
+      <video
+        class="ugc-video"
+        src="videos/ugc-lipbutter.mp4"
+        playsinline
+        muted
+        controls
+        <!-- optional: add a poster frame if you have one -->
+        <!-- poster="images/ugc-lipbutter-cover.jpg" -->
+      ></video>
 
-    <!-- the video -->
-    <video
-      class="ugc-video"
-      src="videos/testimonial-lip-butter.mp4"
-      playsinline
-      muted
-      controls
-    ></video>
-
-    <!-- the iPhone frame image -->
-    <img
-      src="images/phone-frame.png"
-      alt=""
-      class="ugc-phone-frame"
-      aria-hidden="true"
-    >
-  </div>
-</article>
+      <!-- iPhone frame image -->
+      <img
+        src="images/phone-frame-large-v2.png"
+        alt=""
+        class="ugc-phone-frame"
+        aria-hidden="true"
+      >
+    </div>
+  </article>
 
 </section>
 
