ugc phone frame v4

--- a/ugc.html
+++ b/ugc.html
@@ -134,21 +134,21 @@
   <!-- 1. TESTIMONIAL · LIP BUTTER -->
   <article class="ugc-card">
     <div class="ugc-phone">
-      <!-- pill label on top of the phone -->
+      
+      <!-- pill label -->
       <button type="button" class="ugc-tag">testimonial</button>
 
       <!-- main video -->
       <video
         class="ugc-video"
-        src="videos/ugc-lipbutter.mp4" 
+        src="images/ugc-lipbutter.mp4"
+        poster="images/ugc-lipbutter-poster.jpg"
         playsinline
         muted
         controls
-        <!-- optional: add a poster frame if you have one -->
-        <!-- poster="images/ugc-lipbutter-poster.jpg" -->
       ></video>
 
-      <!-- iPhone frame image -->
+      <!-- phone frame -->
       <img
         src="images/phone-frame-large-v2.png"
         alt=""
@@ -157,7 +157,6 @@
       >
     </div>
   </article>
-
 </section>
 
 <!-- =================== UGC Offer Banner =================== -->
