--- a/ugc.html
+++ b/ugc.html
@@ -157,6 +157,34 @@
       >
     </div>
   </article>
+
+ <!-- 2. GREENSCREEN · SPROUT -->
+  <article class="ugc-card">
+    <div class="ugc-phone">
+
+      <!-- pill label -->
+      <button type="button" class="ugc-tag">greenscreen</button>
+
+      <!-- main video -->
+      <video
+        class="ugc-video"
+        src="images/ugc-prepAI-sprout.mp4"
+        poster="images/ugc-prepAI-sprout-poster.jpg"
+        playsinline
+        muted
+        controls
+      ></video>
+
+      <!-- phone frame -->
+      <img
+        src="images/phone-frame-large-v2.png"
+        alt=""
+        class="ugc-phone-frame"
+        aria-hidden="true"
+      >
+    </div>
+  </article>
+
 </section>
 
 <!-- =================== UGC Offer Banner =================== -->
