remove phone frame for now

--- a/ugc.html
+++ b/ugc.html
@@ -136,8 +136,8 @@
     <div class="ugc-phone">
 
       <!-- pill label -->
-      <button type="button" class="ugc-tag">greenscreen</button>
-
+      <button type="button" class="ugc-tag">Greenscreen</button>
+      <button type="button" class="ugc-tag">Prep AI</button>
       <!-- main video -->
       <video
         class="ugc-video"
@@ -147,14 +147,6 @@
         muted
         controls
       ></video>
-
-      <!-- phone frame -->
-      <img
-        src="images/phone-frame-large-v2.png"
-        alt=""
-        class="ugc-phone-frame"
-        aria-hidden="true"
-      >
     </div>
   </article>
 
@@ -174,14 +166,6 @@
         muted
         controls
       ></video>
-
-      <!-- phone frame -->
-      <img
-        src="images/phone-frame-large-v2.png"
-        alt=""
-        class="ugc-phone-frame"
-        aria-hidden="true"
-      >
     </div>
   </article>
 
