--- a/ugc.html
+++ b/ugc.html
@@ -147,6 +147,12 @@
         muted
         controls
       ></video>
+<!-- phone frame -->
+      <img
+        src="images/phone-frame-large-v2.png"
+        alt=""
+        class="ugc-phone-frame"
+        aria-hidden="true">
     </div>
   </article>
 
@@ -166,9 +172,14 @@
         muted
         controls
       ></video>
+<!-- phone frame -->
+      <img
+        src="images/phone-frame-large-v2.png"
+        alt=""
+        class="ugc-phone-frame"
+        aria-hidden="true">
     </div>
   </article>
-
 </section>
 
 <!-- =================== UGC Offer Banner =================== -->
