vary phone frame size on ugc page

--- a/ugc.html
+++ b/ugc.html
@@ -136,8 +136,7 @@
     <div class="ugc-phone">
 
       <!-- pill label -->
-      <button type="button" class="ugc-tag">Greenscreen</button>
-      <button type="button" class="ugc-tag">Prep AI</button>
+      <button type="button" class="ugc-tag">greenscreen</button>
       <!-- main video -->
       <video
         class="ugc-video"
@@ -149,7 +148,7 @@
       ></video>
 <!-- phone frame -->
       <img
-        src="images/phone-frame-large-v2.png"
+        src="images/phone-frame-large-v1.png"
         alt=""
         class="ugc-phone-frame"
         aria-hidden="true">
@@ -181,6 +180,33 @@
     </div>
   </article>
 </section>
+
+<!-- 3. SKIT · CADENCE -->
+  <article class="ugc-card">
+    <div class="ugc-phone">
+
+      <!-- pill label -->
+      <button type="button" class="ugc-tag">skit</button>
+
+      <!-- main video -->
+      <video
+        class="ugc-video"
+        src="images/ugc-cadence.mp4"
+        poster="images/ugc-cadence-poster.jpg"
+        playsinline
+        muted
+        controls
+      ></video>
+<!-- phone frame -->
+      <img
+        src="images/phone-frame-large-v3.png"
+        alt=""
+        class="ugc-phone-frame"
+        aria-hidden="true">
+    </div>
+  </article>
+</section>
+
 
 <!-- =================== UGC Offer Banner =================== -->
 <section class="membership" aria-label="membership">
