--- a/ugc.html
+++ b/ugc.html
@@ -92,7 +92,7 @@
   <section class="intro container">
     <h2>Welcome to my UGC Portfolio!</h2>
     <p style="margin-bottom: 1.5em; line-height: 1.6; text-align: justify;">
-      Check out my featured work below showcasing high-coverting videos trusted by brands like Navi Beauty, Alo, & Motion AI. Click on the intro video so we can get properly introduced!</p>
+      Check out my featured work below showcasing high-coverting videos trusted by brands like Navi Beauty, Cadence, & Sprout. Swipe right below to view all my videos!</p>
   </section>
 
 <!-- Sticky taupe nav on scroll (diagnostic version) -->
@@ -129,14 +129,14 @@
 
 <!-- =================== UGC Reel Strip =================== -->
 <section class="ugc-reel-section" aria-label="UGC vertical samples">
-  <h2 class="visually-hidden">UGC Video Examples</h2>
+<h2>Swipe right for more!</h2>
 
- <!-- 1. GREENSCREEN · SPROUT -->
+<!-- 1. GREENSCREEN · SPROUT -->
   <article class="ugc-card">
     <div class="ugc-phone">
 
       <!-- pill label -->
-      <button type="button" class="ugc-tag">greenscreen</button>
+      <button type="button" class="ugc-tag">greenscreen | AI</button>
       <!-- main video -->
       <video
         class="ugc-video"
@@ -160,7 +160,7 @@
     <div class="ugc-phone">
 
       <!-- pill label -->
-      <button type="button" class="ugc-tag">testimonial</button>
+      <button type="button" class="ugc-tag">testimonial | lip care</button>
 
       <!-- main video -->
       <video
@@ -179,14 +179,13 @@
         aria-hidden="true">
     </div>
   </article>
-</section>
 
 <!-- 3. SKIT · CADENCE -->
   <article class="ugc-card">
     <div class="ugc-phone">
 
       <!-- pill label -->
-      <button type="button" class="ugc-tag">skit</button>
+      <button type="button" class="ugc-tag">skit | travel</button>
 
       <!-- main video -->
       <video
@@ -220,7 +219,7 @@
     <p>
     ✅ UGC Scriptwriter | Expert in storytelling & conversion tactics.</p>
     <p>
-    ✅ Partners with top brands | Navi Beauty, Vuori & more.</p>
+    ✅ Partner with Top Brands | Navi Beauty, Vuori & more.</p>
     <p>
     ✅ Results-driven | Focused on boosting conversions & engagement for short or long-form content.</p>
     <p>
@@ -276,15 +275,23 @@
     🐻 PhD in Molecular Biology 🧬 from UC Berkeley</p>
       <p> 
     🇳🇴 Born in Norway</p>
-      <p> 🧘🏿‍♀️
+      <p>
+    🇨🇿 🇬🇭Czech & Ghanaian Heritage</p>
+ 
+<p> 🌇🌴🎥
+    LA Girlie | SF Techie 🌁🌉💻</p>
+
+<p> 🧘🏿‍♀️
     Certified Yoga Instructor</p>
       <p>
     👭 Oldest of 6 siblings</p>
       <p>
-    💻 SF Techie at heart</p>
+    <p>🏆 Triathlete</p>
       <p>
-    🍓🍌 Smoothie Addict</p>
-    <a class="btn btn-pill btn-outline" href="www.lisaeshunwilson.com">A LITTLE MORE ABOUT LISA</a>
+    🍓🍌 Smoothie Lover</p>
+<p>
+    📩 lisa@ugcwithlisaeshunwilson.com</p>
+    <a class="btn btn-pill btn-outline" href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Inquiry">LET'S TALK</a>
   </div>
 </section>
 
