--- a/welcome.html
+++ b/welcome.html
@@ -138,7 +138,7 @@ You've unlocked our full library of yoga and meditation classes with a premium s
         <h3>Lull</h3>
         <p>Slow down and reset with restorative flows, yin practices, and meditations
         to calm your nerves.</p>
-        <a href="login.html"
+        <a href="https://available-tarsal-b72.notion.site/Yoga-with-Lisa-Exclusive-Full-Content-Library-2c06b96c132180b398dbc1d20c6f81f5"
            class="btn btn-pill btn-dark">Regulate Nerves</a>
       </div>
     </article>
@@ -151,7 +151,7 @@ You've unlocked our full library of yoga and meditation classes with a premium s
       <div class="meta">
         <h3>Level-Up</h3>
         <p>Glow from the inside out with cardio-based workouts to complement your practice.</p>
-        <a href="login.html"
+        <a href="https://available-tarsal-b72.notion.site/Yoga-with-Lisa-Exclusive-Full-Content-Library-2c06b96c132180b398dbc1d20c6f81f5"
            class="btn btn-pill btn-dark">Level Up Your Practice</a>
       </div>
     </article>
