--- a/ugc.html
+++ b/ugc.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Yoga with Lisa</title>
-  <link rel="icon" href="images/favicon.png">
+  <title>UGC with Lisa</title>
+  <link rel="icon" href="images/favicon-ugc.png">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Adobe Fonts -->
@@ -12,13 +12,14 @@
   <title>UGC with Lisa</title>
   
 <!-- Favicons -->
-<link rel="icon" href="/favicon.ico" sizes="any"> <!-- classic fallback -->
-<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+<!-- UGC Favicons -->
+<link rel="icon" href="/images/favicon-ugc.ico" sizes="any">
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-ugc-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-ugc-16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon-ugc-180.png">
 <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#1a1a1a">
 <meta name="theme-color" content="#ffffff">
-  
+
 <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500;1,700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
@@ -31,6 +32,11 @@
 <meta property="og:image" content="https://www.yogawithlisa.ai/images/ugc.jpg">
 <meta property="og:url" content="https://www.yogawithlisa.ai/ugc.html">
 <meta property="og:type" content="website">
+
+<!-- Slack Rich Preview Enhancement -->
+<meta property="og:site_name" content="UGC with Lisa">
+<meta name="author" content="Lisa Eshun-Wilson">
+<meta name="slack-app-id" content="yogawithlisa-ugc-page">
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
