ugc video phone wrap

--- a/ugc.html
+++ b/ugc.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>UGC with Lisa</title>
   <link rel="icon" href="images/favicon-ugc.png">
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Adobe Fonts -->
   <link rel="stylesheet" href="https://use.typekit.net/uwl6zhw.css">
   <title>UGC with Lisa</title>
@@ -36,11 +34,10 @@
 <!-- Slack Rich Preview Enhancement -->
 <meta property="og:site_name" content="UGC with Lisa">
 <meta name="author" content="Lisa Eshun-Wilson">
-<meta name="slack-app-id" content="yogawithlisa-ugc-page">
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="UCG with Lisa">
+<meta name="twitter:title" content="UGC with Lisa">
 <meta name="twitter:description" content="High-quality content to promote high-quality products.">
 <meta name="twitter:image" content="https://www.yogawithlisa.ai/images/ugc.jpg">
 </head>
