ugc phone frame update

--- a/ugc.html
+++ b/ugc.html
@@ -137,60 +137,35 @@
 <!-- 1. GREENSCREEN · SPROUT -->
   <article class="ugc-card">
     <div class="ugc-phone">
-
-      <!-- pill label -->
-      <button type="button" class="ugc-tag">greenscreen | AI</button>
-      <!-- main video -->
-      <video
-        class="ugc-video"
+      <button type="button" class="ugc-tag">greenscreen | app</button>
+      <video class="ugc-video"
         src="images/ugc-prepAI-sprout.mp4"
         poster="images/ugc-prepAI-sprout-poster.jpg"
         playsinline
         muted
         controls
       ></video>
-<!-- phone frame -->
-      <img
-        src="images/phone-frame-large-v1.png"
-        alt=""
-        class="ugc-phone-frame"
-        aria-hidden="true">
     </div>
   </article>
 
 <!-- 2. TESTIMONIAL · LIP BUTTER -->
   <article class="ugc-card">
     <div class="ugc-phone">
-
-      <!-- pill label -->
       <button type="button" class="ugc-tag">testimonial | lip care</button>
-
-      <!-- main video -->
-      <video
-        class="ugc-video"
+      <video class="ugc-video"
         src="images/ugc-lipbutter.mp4"
         poster="images/ugc-lipbutter-poster.jpg"
         playsinline
         muted
         controls
       ></video>
-<!-- phone frame -->
-      <img
-        src="images/phone-frame-large-v2.png"
-        alt=""
-        class="ugc-phone-frame"
-        aria-hidden="true">
     </div>
   </article>
 
 <!-- 3. SKIT · CADENCE -->
   <article class="ugc-card">
     <div class="ugc-phone">
-
-      <!-- pill label -->
       <button type="button" class="ugc-tag">skit | travel</button>
-
-      <!-- main video -->
       <video
         class="ugc-video"
         src="images/ugc-cadence.mp4"
@@ -199,12 +174,6 @@
         muted
         controls
       ></video>
-<!-- phone frame -->
-      <img
-        src="images/phone-frame-large-v3.png"
-        alt=""
-        class="ugc-phone-frame"
-        aria-hidden="true">
     </div>
   </article>
 </section>
