Add ugc videos online

--- a/ugc.html
+++ b/ugc.html
@@ -95,7 +95,7 @@
   <section class="intro container">
     <h2>Welcome to my UGC Portfolio!</h2>
     <p style="margin-bottom: 1.5em; line-height: 1.6; text-align: justify;">
-      Check out my featured work below showcasing high-coverting videos trusted by brands like Navi Beauty, Cadence, & Sprout. Swipe right below to view all my videos!</p>
+      Check out my featured work below showcasing high-coverting videos trusted by brands like Navi Beauty, Cadence, & Sprout AI.</p>
   </section>
 
 <!-- Sticky taupe nav on scroll (diagnostic version) -->
@@ -132,37 +132,25 @@
 
 <!-- =================== UGC Reel Strip =================== -->
 <section class="ugc-reel-section" aria-label="UGC vertical samples">
-<h2>Swipe right for more!</h2>
+<h2>Work with me today.</h2>
 
-<!-- 1. GREENSCREEN · SPROUT -->
+<!-- 0. TESTIMONIAL · INTRO -->
   <article class="ugc-card">
     <div class="ugc-phone">
-      <button type="button" class="ugc-tag">greenscreen | app</button>
-      <video class="ugc-video"
-        src="images/ugc-prepAI-sprout.mp4"
-        poster="images/ugc-prepAI-sprout-poster.jpg"
+      <button type="button" class="ugc-tag">intro | welcome</button>
+      <video
+        class="ugc-video"
+        src="images/ugc-intro.mp4"
+        poster="images/ugc-intro-poster.jpg"
         playsinline
         muted
         controls
       ></video>
     </div>
   </article>
+</section>
 
-<!-- 2. TESTIMONIAL · LIP BUTTER -->
-  <article class="ugc-card">
-    <div class="ugc-phone">
-      <button type="button" class="ugc-tag">testimonial | lip care</button>
-      <video class="ugc-video"
-        src="images/ugc-lipbutter.mp4"
-        poster="images/ugc-lipbutter-poster.jpg"
-        playsinline
-        muted
-        controls
-      ></video>
-    </div>
-  </article>
-
-<!-- 3. SKIT · CADENCE -->
+<!-- 1. SKIT · CADENCE -->
   <article class="ugc-card">
     <div class="ugc-phone">
       <button type="button" class="ugc-tag">skit | travel</button>
@@ -178,6 +166,61 @@
   </article>
 </section>
 
+<!-- 2. TESTIMONIAL · LIP BUTTER -->
+  <article class="ugc-card">
+    <div class="ugc-phone">
+      <button type="button" class="ugc-tag">testimonial | lips</button>
+      <video class="ugc-video"
+        src="images/ugc-lipbutter.mp4"
+        poster="images/ugc-lipbutter-poster.jpg"
+        playsinline
+        muted
+        controls
+      ></video>
+    </div>
+  </article>
+
+<!-- 3. GREENSCREEN · SPROUT -->
+  <article class="ugc-card">
+    <div class="ugc-phone">
+      <button type="button" class="ugc-tag">greenscreen | app</button>
+      <video class="ugc-video"
+        src="images/ugc-prepAI-sprout.mp4"
+        poster="images/ugc-prepAI-sprout-poster.jpg"
+        playsinline
+        muted
+        controls
+      ></video>
+    </div>
+  </article>
+
+<!-- 4. BROLL w VO · ALO -->
+  <article class="ugc-card">
+    <div class="ugc-phone">
+      <button type="button" class="ugc-tag">broll wVO | athleisure </button>
+      <video class="ugc-video"
+        src="images/ugc-alo.mp4"
+        poster="images/ugc-alo-poster.jpg"
+        playsinline
+        muted
+        controls
+      ></video>
+    </div>
+  </article>
+
+<!-- 5. PRODUCT DEMO · CREST WHITENING STRIPS -->
+  <article class="ugc-card">
+    <div class="ugc-phone">
+      <button type="button" class="ugc-tag">product demo | whitening strips</button>
+      <video class="ugc-video"
+        src="images/ugc-crest.mp4"
+        poster="images/ugc-crest-poster.jpg"
+        playsinline
+        muted
+        controls
+      ></video>
+    </div>
+  </article>
 
 <!-- =================== UGC Offer Banner =================== -->
 <section class="membership" aria-label="membership">
