--- a/ugc.html
+++ b/ugc.html
@@ -64,7 +64,7 @@
     <div class="hero-inner">
       <h1 class="display">
   	<span class="nowrap">Lisa Eshun-Wilson</span><br/>
-  	<span class="nowrap">UGC Creator</span><br/> 📍 SF & LA   
+  	<span class="nowrap">UGC Creator</span><br/> lisa@ugcwithlisaeshunwilson.com   
       </h1>
 
   <div class="ugc-social-icons">
@@ -95,7 +95,7 @@
   <section class="intro container">
     <h2>Welcome to my UGC Portfolio!</h2>
     <p style="margin-bottom: 1.5em; line-height: 1.6; text-align: justify;">
-      Check out my featured work below showcasing high-coverting videos trusted by brands like Navi Beauty, Cadence, & Sprout AI.</p>
+      If you're looking for a results-driven creator dedicated to making high-coverting videos, you've come to the right place. Check out my introductory video below to get all the deets and email me at lisa@ugcwithlisaeshunwilson.com today.</p>
   </section>
 
 <!-- Sticky taupe nav on scroll (diagnostic version) -->
@@ -234,7 +234,6 @@
     <p>
     ✅ UGC Scriptwriter | Expert in storytelling & conversion tactics.</p>
     <p>
-    ✅ Partner with Top Brands | Navi Beauty, Vuori & more.</p>
     <p>
     ✅ Results-driven | Focused on boosting conversions & engagement for short or long-form content.</p>
     <p>
