Add Work with Me CTA Button

--- a/ugc.html
+++ b/ugc.html
@@ -64,7 +64,7 @@
     <div class="hero-inner">
       <h1 class="display">
   	<span class="nowrap">Lisa Eshun-Wilson</span><br/>
-  	<span class="nowrap">UGC Creator</span><br/> lisa@ugcwithlisaeshunwilson.com   
+  	<span class="nowrap">UGC Creator</span><br/> & Strategist   
       </h1>
 
   <div class="ugc-social-icons">
@@ -95,8 +95,10 @@
   <section class="intro container">
     <h2>Welcome to my UGC Portfolio!</h2>
     <p style="margin-bottom: 1.5em; line-height: 1.6; text-align: justify;">
-      If you're looking for a results-driven creator dedicated to making high-coverting videos, you've come to the right place. Check out my introductory video below to get all the deets and email me at lisa@ugcwithlisaeshunwilson.com today.</p>
-  </section>
+      If you're looking for a results-driven creator dedicated to making high-coverting videos, you've come to the right place. Let's get a positive ROI with UGC. Click on my intro video to get started and email me today.</p>
+<a class="btn btn-pill btn-outline" href="mailto:lisaeshunwilson@gmail.com?subject=UGC%20Collaboration%20Inquiry">WORK WITH ME</a>
+  </div>  
+</section>
 
 <!-- Sticky taupe nav on scroll (diagnostic version) -->
 <script>
@@ -107,7 +109,7 @@
     const getY = () =>
       window.pageYOffset ||
       document.documentElement.scrollTop ||
-      document.body.scrollTop || 0;
+      document.bodyscrollTop || 0;
 
     const apply = (y) => {
       const on = y > 50;
