Add MTC section

--- a/ugc.html
+++ b/ugc.html
@@ -273,7 +273,67 @@
         <img src="images/ug/ug4.jpg" alt="Yoga with Lisa — post 4" />
       </a>
       <a class="ig-card" href="#" aria-label="Instagram post 5">
-        <img src="images/ug/ug5.jpg" alt="Yoga with Lisa — post 5" />
+        <img src="images/ug/ug5.jpg" alt="Yoga with Lisa — post 5" /></a>
+<a class="ig-card" href="#" aria-label="Instagram post 6">
+        <img src="images/ug/ug6.jpg" alt="Yoga with Lisa — post 6" /></a>
+<a class="ig-card" href="#" aria-label="Instagram post 7">
+        <img src="images/ug/ug7.jpg" alt="Yoga with Lisa — post 7" /></a>
+<a class="ig-card" href="#" aria-label="Instagram post 8">
+        <img src="images/ug/ug8.jpg" alt="Yoga with Lisa — post 8" /></a>
+<a class="ig-card" href="#" aria-label="Instagram post 9">
+        <img src="images/ug/ug9.jpg" alt="Yoga with Lisa — post 9" /></a>
+<a class="ig-card" href="#" aria-label="Instagram post 10">
+        <img src="images/ug/ug9.jpg" alt="Yoga with Lisa — post 10" /></a>
+      </a>
+    </div>
+
+    <button class="ig-nav ig-next" aria-label="Next">›</button>
+  </div>
+</section>
+
+<!-- =================== Meet the Creator Carousel =================== -->
+<section class="ig card" aria-label="Instagram">
+  <div class="ig-head">
+    <h3>a little more about lisa</h3>
+    <a class="btn btn-pill btn-outline" href="https://instagram.com/lisaeshunwilson/" target="_blank" rel="noopener">
+      FIND ME ON SOCIAL
+    </a>
+  </div>
+
+  <div class="ig-wrap">
+    <button class="ig-nav ig-prev" aria-label="Previous">‹</button>
+
+    <div class="ig-track" id="igTrack">
+      <!-- Replace these image paths with your own (local images or CDN) -->
+      <a class="ig-card" href="#" aria-label="Instagram post 1">
+        <img src="images/mtc/mtc1.jpg" alt="Yoga with Lisa — post 1" />
+      </a>
+      <a class="ig-card" href="#" aria-label="Instagram post 2">
+        <img src="images/mtc/mtc2.jpg" alt="Yoga with Lisa — post 2" />
+      </a>
+      <a class="ig-card" href="#" aria-label="Instagram post 3">
+        <img src="images/mtc/mtc3.jpg" alt="Yoga with Lisa — post 3" />
+      </a>
+      <a class="ig-card" href="#" aria-label="Instagram post 4">
+        <img src="images/mtc/mtc4.jpg" alt="Yoga with Lisa — post 4" />
+      </a>
+      <a class="ig-card" href="#" aria-label="Instagram post 5">
+        <img src="images/mtc/mtc5.jpg" alt="Yoga with Lisa — post 5" />
+      </a>
+<a class="ig-card" href="#" aria-label="Instagram post 5">
+        <img src="images/mtc/mtc6.jpg" alt="Yoga with Lisa — post 5" />
+      </a>
+<a class="ig-card" href="#" aria-label="Instagram post 5">
+        <img src="images/mtc/mtc7.jpg" alt="Yoga with Lisa — post 5" />
+      </a>
+<a class="ig-card" href="#" aria-label="Instagram post 5">
+        <img src="images/mtc/mtc8.jpg" alt="Yoga with Lisa — post 5" />
+      </a>
+<a class="ig-card" href="#" aria-label="Instagram post 5">
+        <img src="images/mtc/mtc9.jpg" alt="Yoga with Lisa — post 5" />
+      </a>
+<a class="ig-card" href="#" aria-label="Instagram post 5">
+        <img src="images/mtc/mtc10.jpg" alt="Yoga with Lisa — post 5" />
       </a>
     </div>
 
