Update UGC button

--- a/ugc.html
+++ b/ugc.html
@@ -49,7 +49,7 @@
       <a class="brand" href="index.html">ugc with lisa</a>     
       <nav class="main-nav" aria-label="Primary">
         <ul>
-          <li><a href="mailto:lisaeshunwilson@gmail.com?subject=UGC%20Collaboration%20Inquiry" class="login-btn">CHAT</a></li>
+          <li><a href="mailto:lisaeshunwilson@gmail.com?subject=UGC%20Collaboration%20Inquiry" class="login-btn">EMAIL ME NOW</a></li>
         </ul>
       </nav>
     </div>
@@ -63,8 +63,8 @@
 
     <div class="hero-inner">
       <h1 class="display">
-  	<span class="nowrap">Lisa Eshun-Wilson</span><br/>
-  	<span class="nowrap">UGC Creator</span><br/> & Strategist   
+  	<span class="nowrap"><em>Lisa Eshun-Wilson</em></span><br/>
+  	<span class="nowrap">UGC <em>Creator</em></span><br/> & Strategist   
       </h1>
 
   <div class="ugc-social-icons">
@@ -81,7 +81,7 @@
     <img src="images/icons/x-twitter.svg" alt="Twitter/X">
   </a>
 
-  <a href="mailto:lisaeshunwilson@gmail.com?subject=UGC%20Collaboration%20Inquiry" class="icon-btn">
+  <a href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Collaboration%20Inquiry" class="icon-btn">
     <img src="images/icons/email.svg" alt="Email">
   </a>
 </div>  
@@ -91,13 +91,12 @@
     </div>
   </section>
 
-  <!-- Minimal Intro -->
+  <!-- Intro Section -->
   <section class="intro container">
     <h2>Welcome to my UGC Portfolio!</h2>
-    <p style="margin-bottom: 1.5em; line-height: 1.6; text-align: justify;">
+    <p class="intro-text">
       If you're looking for a results-driven creator dedicated to making high-coverting videos, you've come to the right place. Let's get a positive ROI with UGC. Click on my intro video to get started and email me today.</p>
-<a class="btn btn-pill btn-outline" href="mailto:lisaeshunwilson@gmail.com?subject=UGC%20Collaboration%20Inquiry">WORK WITH ME</a>
-  </div>  
+<a class="cta-btn" href="mailto:ugcwithlisaeshunwilson.com?subject=UGC%20Collaboration%20Inquiry">WORK WITH ME TODAY</a>  
 </section>
 
 <!-- Sticky taupe nav on scroll (diagnostic version) -->
