Update UGC page style intro container

--- a/ugc.html
+++ b/ugc.html
@@ -95,8 +95,10 @@
   <section class="intro container">
     <h2>Welcome to my UGC Portfolio!</h2>
     <p class="intro-text">
-      If you're looking for a results-driven creator dedicated to making high-coverting videos, you've come to the right place. Let's get a positive ROI with UGC. Click on my intro video to get started and email me today.</p>
-<a class="cta-btn" href="mailto:ugcwithlisaeshunwilson.com?subject=UGC%20Collaboration%20Inquiry">WORK WITH ME TODAY</a>  
+      If you're looking for a results-driven creator dedicated to making high-converting videos, you've come to the right place. Let's get a positive ROI with UGC. Click on my intro video below to get started and email me today.
+</p>
+<a class="cta-btn" href="mailto:lisa@ugcwithlisaeshunwilson.com?subject=UGC%20Collaboration%20Inquiry">WORK WITH ME TODAY
+</a>  
 </section>
 
 <!-- Sticky taupe nav on scroll (diagnostic version) -->
