UTC image additions and bug fixes

--- a/ugc.html
+++ b/ugc.html
@@ -135,7 +135,7 @@
 
 <!-- =================== UGC Reel Strip =================== -->
 <section class="ugc-reel-section" aria-label="UGC vertical samples">
-<h2>Work with me today.</h2>
+<h2>You've come to the right place.</h2>
 
 <!-- 1. TESTIMONIAL · INTRO -->
   <article class="ugc-card">
@@ -274,17 +274,22 @@
         <img src="images/ug/ug4.jpg" alt="Yoga with Lisa — post 4" />
       </a>
       <a class="ig-card" href="#" aria-label="Instagram post 5">
-        <img src="images/ug/ug5.jpg" alt="Yoga with Lisa — post 5" /></a>
-<a class="ig-card" href="#" aria-label="Instagram post 6">
-        <img src="images/ug/ug6.jpg" alt="Yoga with Lisa — post 6" /></a>
-<a class="ig-card" href="#" aria-label="Instagram post 7">
-        <img src="images/ug/ug7.jpg" alt="Yoga with Lisa — post 7" /></a>
-<a class="ig-card" href="#" aria-label="Instagram post 8">
-        <img src="images/ug/ug8.jpg" alt="Yoga with Lisa — post 8" /></a>
-<a class="ig-card" href="#" aria-label="Instagram post 9">
-        <img src="images/ug/ug9.jpg" alt="Yoga with Lisa — post 9" /></a>
-<a class="ig-card" href="#" aria-label="Instagram post 10">
-        <img src="images/ug/ug9.jpg" alt="Yoga with Lisa — post 10" /></a>
+        <img src="images/ug/ug5.jpg" alt="Yoga with Lisa — post 5" />
+      </a>
+      <a class="ig-card" href="#" aria-label="Instagram post 6">
+        <img src="images/ug/ug6.jpg" alt="Yoga with Lisa — post 6" />
+      </a>
+      <a class="ig-card" href="#" aria-label="Instagram post 7">
+        <img src="images/ug/ug7.jpg" alt="Yoga with Lisa — post 7" />
+      </a>
+      <a class="ig-card" href="#" aria-label="Instagram post 8">
+        <img src="images/ug/ug8.jpg" alt="Yoga with Lisa — post 8" />
+      </a>
+       <a class="ig-card" href="#" aria-label="Instagram post 9">
+        <img src="images/ug/ug9.jpg" alt="Yoga with Lisa — post 9" />
+      </a>
+      <a class="ig-card" href="#" aria-label="Instagram post 10">
+        <img src="images/ug/ug10.jpg" alt="Yoga with Lisa — post 10" />
       </a>
     </div>
 
