intro container font weight from 600 to 400 edit

--- a/ugc.html
+++ b/ugc.html
@@ -227,7 +227,7 @@
 
 <!-- =================== UGC Offer Banner =================== -->
 <section class="membership" aria-label="membership">
-  <div class="membership-media" style="background-image:url('images/membership.jpg')"></div>
+  <div class="membership-media" style="background-image:url('images/ucg-membership.jpg')"></div>
   <div class="membership-overlay"></div>
   <div class="membership-inner container">
     <h2>Why work with me?</h2>
@@ -360,8 +360,8 @@
       <p>
     🇨🇿 🇬🇭Czech & Ghanaian Heritage</p>
  
-<p> 🌇🌴🎥
-    LA Girlie | SF Techie 🌁🌉💻</p>
+<p> 🌴
+    LA Girlie | SF Techie 🌁</p>
 
 <p> 🧘🏿‍♀️
     Certified Yoga Instructor</p>
